<resources>
    <string name="app_name">studentform</string>
    <string name="mypageheader">Student Form Data</string>
    <string name="myname">Name: Habib UR Rehman</string>
    <string name="myphone">Phone: 0303-4498139</string>
    <string name="myemail">Email: habib.gcu@hotmail.com</string>
    <string name="mygender">Gender: Male</string>
    <string name="mydepartment">Department: Android</string>
    <string name="loginform">Login Form</string>
    <string name="bsegment">This is Fragment b</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>